@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2017-2019 TweetWallFX
+ * Copyright (c) 2017-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -28,57 +28,24 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.function.Function;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Resolver of URLs.
  */
 public class URLHelper {
 
-    private static final Logger LOGGER = LogManager.getLogger(URLHelper.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(URLHelper.class);
     private static final int MAX_CACHE_SIZE = Integer.getInteger("org.tweetwall.urlResolver.cacheSize", 2048);
     private static final Map<String, String> UNSHORTENED_LINKS = new LinkedHashMap<>();
     private static final Pattern SLASH_SPLITTER = Pattern.compile("/");
-    private static final Function<String, String> UNSHORT_LINK = wrapFunction(urlString -> {
-        final URL url = new URL(urlString);
-
-        URLConnection connection = url.openConnection();
-
-        if (connection instanceof HttpURLConnection) {
-            final HttpURLConnection httpURLConnection = (HttpURLConnection) connection;
-            final int responseCode;
-
-            try {
-                responseCode = httpURLConnection.getResponseCode();
-            } catch (final IOException ioe) {
-                throw new URLResolvingException("Error resolving URL \"" + urlString + "\"", ioe);
-            }
-
-            if (IntStream.of(HttpURLConnection.HTTP_MOVED_PERM,
-                    HttpURLConnection.HTTP_MOVED_TEMP,
-                    HttpURLConnection.HTTP_SEE_OTHER,
-                    HttpURLConnection.HTTP_NOT_MODIFIED).anyMatch(i -> i == responseCode)) {
-                // redirected
-                final String redirected = connection.getHeaderField("Location");
-
-                if (null == redirected) {
-                    return urlString;
-                } else {
-                    LOGGER.info("URL '" + urlString + "' is redirected to '" + redirected + "'");
-                    return resolve(redirected);
-                }
-            }
-        }
-
-        return connection.getURL().toString();
-    });
 
     private URLHelper() {
         // prevent instantiation
@@ -97,16 +64,16 @@ public class URLHelper {
         final String resolvedURL;
 
         try {
-            resolvedURL = UNSHORTENED_LINKS.computeIfAbsent(urlString, UNSHORT_LINK);
+            resolvedURL = UNSHORTENED_LINKS.computeIfAbsent(urlString, URLHelper::unshortenLink);
         } catch (final URLResolvingException ex) {
             LOGGER.error(ex.getMessage(), ex);
             return encodeURL(urlString);
         }
 
         if (urlString.equals(resolvedURL)) {
-            LOGGER.info("URL: '" + urlString + "' was not redirected");
+            LOGGER.info("URL: '{}' was not redirected", urlString);
         } else {
-            LOGGER.info("URL: '" + urlString + "' was resolved as '" + resolvedURL + "'");
+            LOGGER.info("URL: '{}' was resolved as '{}'", urlString, resolvedURL);
         }
 
         if (MAX_CACHE_SIZE > UNSHORTENED_LINKS.size()) {
@@ -116,40 +83,52 @@ public class URLHelper {
         return encodeURL(resolvedURL);
     }
 
+    private static String unshortenLink(final String urlString) {
+        try {
+            final URL url = new URL(urlString);
+            final URLConnection connection = url.openConnection();
+
+            if (null == connection) {
+                throw new IllegalStateException("Failed to open connection to " + url);
+            } else if (connection instanceof HttpURLConnection httpURLConnection) {
+                final int responseCode = httpURLConnection.getResponseCode();
+
+                if (IntStream.of(HttpURLConnection.HTTP_MOVED_PERM,
+                        HttpURLConnection.HTTP_MOVED_TEMP,
+                        HttpURLConnection.HTTP_SEE_OTHER,
+                        HttpURLConnection.HTTP_NOT_MODIFIED).anyMatch(i -> i == responseCode)) {
+                    // redirected
+                    final String redirected = connection.getHeaderField("Location");
+
+                    if (null == redirected) {
+                        return urlString;
+                    } else {
+                        LOGGER.info("URL '{}' is redirected to '{}'", urlString, redirected);
+                        return resolve(redirected);
+                    }
+                }
+            }
+
+            return connection.getURL().toString();
+        } catch (final IOException ioe) {
+            throw new URLResolvingException("Error resolving URL \"" + urlString + "\"", ioe);
+        }
+    }
+
     private static String encodeURL(final String urlString) {
         final String protocol = urlString.substring(0, urlString.indexOf("//") + 2);
 
         try {
             final String encodedURL = protocol + SLASH_SPLITTER.splitAsStream(urlString.substring(protocol.length()))
-                    .map(wrapFunction(part -> URLEncoder.encode(part, "UTF-8")))
+                    .map(part -> URLEncoder.encode(part, StandardCharsets.UTF_8))
                     .collect(Collectors.joining("/"));
 
-            LOGGER.info("encodedURL of '" + urlString + "' is '" + encodedURL + "'");
+            LOGGER.info("encodedURL of '{}' is '{}'", urlString, encodedURL);
             return encodedURL;
         } catch (final RuntimeException ex) {
-            LOGGER.warn("Encoding URL to UTF-8 failed. URL='" + urlString + "'", ex);
+            LOGGER.warn("Encoding URL to UTF-8 failed. URL='{}'", urlString, ex);
             return urlString;
         }
-    }
-
-    private static <T, R> Function<T, R> wrapFunction(final ExceptionalFunction<T, R> exceptionalFunction) {
-        return exceptionalFunction::apply;
-    }
-
-    private static interface ExceptionalFunction<T, R> extends Function<T, R> {
-
-        @Override
-        public default R apply(final T t) {
-            try {
-                return applyImpl(t);
-            } catch (final RuntimeException e) {
-                throw e;
-            } catch (final Exception e) {
-                throw new URLResolvingException(e.getMessage(), e);
-            }
-        }
-
-        public R applyImpl(final T t) throws Exception;
     }
 
     private static class URLResolvingException extends RuntimeException {
