@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2018-2019 TweetWallFX
+ * Copyright (c) 2018-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,7 +23,6 @@
  */
 package org.tweetwallfx.filterchain;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -31,48 +30,34 @@ import org.tweetwallfx.config.Configuration;
 import org.tweetwallfx.config.ConfigurationConverter;
 import org.tweetwallfx.util.ConfigurableObjectBase;
 import org.tweetwallfx.util.JsonDataConverter;
+import static org.tweetwallfx.util.Nullable.nullable;
 import static org.tweetwallfx.util.ToString.createToString;
 import static org.tweetwallfx.util.ToString.map;
 
 /**
  * POJO for reading Settings concerning {@link FilterChain}s.
+ *
+ * <p>
+ * Param {@code chains} the mapping of the {@link FilterChainDefinition}s to the
+ * name of the defined {@link FilterChain}
  */
-public final class FilterChainSettings {
+public record FilterChainSettings(
+        Map<String, FilterChainDefinition> chains) {
 
     /**
      * Configuration key under which the data for this Settings object is stored
      * in the configuration data map.
      */
     public static final String CONFIG_KEY = "filterchains";
-    private Map<String, FilterChainDefinition> chains = Collections.emptyMap();
 
-    /**
-     * Returns the mapping the the {@link FilterChainDefinition}s to the name of
-     * the defined {@link FilterChain}.
-     *
-     * @return the mapping the the {@link FilterChainDefinition}s to the name of
-     * the defined {@link FilterChain}
-     */
-    public Map<String, FilterChainDefinition> getChains() {
-        return chains;
-    }
-
-    /**
-     * Sets the mapping the the {@link FilterChainDefinition}s to the name of
-     * the defined {@link FilterChain}.
-     *
-     * @param chains the new value
-     */
-    public void setChains(final Map<String, FilterChainDefinition> chains) {
-        Objects.requireNonNull(chains, "chains must not be null!");
-        this.chains = chains;
+    public FilterChainSettings(
+            final Map<String, FilterChainDefinition> chains) {
+        this.chains = Map.copyOf(Objects.requireNonNull(chains, "chains must not be null!"));
     }
 
     @Override
-    public String toString() {
-        return createToString(this, map(
-                "chains", getChains()
-        ), super.toString());
+    public Map<String, FilterChainDefinition> chains() {
+        return Map.copyOf(chains);
     }
 
     /**
@@ -94,79 +79,37 @@ public final class FilterChainSettings {
 
     /**
      * POJO defining a {@link FilterChain}.
+     *
+     * <p>
+     * Param {@code defaultResult} a boolean flag determining if the evaluated
+     * object are accepted or rejected should no previous evaluation by the
+     * {@link FilterStep}s have terminated the evaluation
+     *
+     * <p>
+     * Param {@code filterSteps} the filter steps contained in the
+     * {@link FilterChain}
+     *
+     * <p>
+     * Param {@code domainObjectClassName} the class name of the domain object
+     * being evaluated
      */
-    public static class FilterChainDefinition {
+    public static record FilterChainDefinition(
+            Boolean defaultResult,
+            List<FilterStepDefinition> filterSteps,
+            String domainObjectClassName) {
 
-        private Boolean defaultResult = null;
-        private List<FilterStepDefinition> filterSteps = Collections.emptyList();
-        private String domainObjectClassName = null;
-
-        /**
-         * Returns a boolean flag determining if the evaluated object are
-         * accepted or rejected should no previous evaluation by the
-         * {@link FilterStep}s have terminated the evaluation.
-         *
-         * @return a boolean flag determining if the evaluated object are
-         * accepted or rejected should no previous evaluation by the
-         * {@link FilterStep}s have terminated the evaluation
-         */
-        public Boolean getDefaultResult() {
-            return defaultResult;
-        }
-
-        /**
-         * Sets a boolean flag determining if the evaluated object are accepted
-         * or rejected should no previous evaluation by the {@link FilterStep}s
-         * have terminated the evaluation.
-         *
-         * @param defaultResult the new value
-         */
-        public void setDefaultResult(final Boolean defaultResult) {
+        public FilterChainDefinition(
+                final Boolean defaultResult,
+                final List<FilterStepDefinition> filterSteps,
+                final String domainObjectClassName) {
             this.defaultResult = defaultResult;
-        }
-
-        /**
-         * Returns the class name of the domain object being evaluated.
-         *
-         * @return the class name of the domain object being evaluated
-         */
-        public String getDomainObjectClassName() {
-            return domainObjectClassName;
-        }
-
-        /**
-         * Sets the class name of the domain object being evaluated.
-         *
-         * @param domainObjectClassName the new value
-         */
-        public void setDomainObjectClassName(final String domainObjectClassName) {
+            this.filterSteps = nullable(filterSteps);
             this.domainObjectClassName = domainObjectClassName;
         }
 
-        /**
-         * Returns the filter steps contained in the {@link FilterChain}.
-         *
-         * @return the filter steps contained in the {@link FilterChain}
-         */
-        public List<FilterStepDefinition> getFilterSteps() {
-            return filterSteps;
-        }
-
-        /**
-         * Sets the filter steps contained in the {@link FilterChain}.
-         *
-         * @param filterSteps the filter steps
-         */
-        public void setFilterSteps(final List<FilterStepDefinition> filterSteps) {
-            Objects.requireNonNull(filterSteps, "filterSteps must not be null!");
-            this.filterSteps = filterSteps;
-        }
-
         @Override
-        public String toString() {
-            return createToString(this, map(
-                    "filterSteps", getFilterSteps()
-            ), super.toString());
+        public List<FilterStepDefinition> filterSteps() {
+            return List.copyOf(filterSteps);
         }
     }
 
@@ -205,7 +148,7 @@ public final class FilterChainSettings {
         @Override
         public <T> T getConfig(final Class<T> typeClass) {
             @SuppressWarnings("unchecked")
-            final Map<String, Object> specializedConfig = (Map<String, Object>) Configuration.getInstance().getConfig(typeClass.getName(), Collections.emptyMap());
+            final Map<String, Object> specializedConfig = (Map<String, Object>) Configuration.getInstance().getConfig(typeClass.getName(), Map.of());
             final Map<String, Object> mergedConfig = Configuration.mergeMap(getConfig(), specializedConfig);
             return JsonDataConverter.convertFromObject(mergedConfig, typeClass);
         }
