@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2018-2019 TweetWallFX
+ * Copyright (c) 2018-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,27 +23,24 @@
  */
 package org.tweetwallfx.google.vision;
 
-import java.io.IOException;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.tweetwallfx.filterchain.FilterChainSettings;
 import org.tweetwallfx.filterchain.FilterStep;
 import org.tweetwallfx.google.GoogleLikelihood;
 import org.tweetwallfx.tweet.api.Tweet;
 import org.tweetwallfx.tweet.api.entry.MediaTweetEntry;
 import org.tweetwallfx.tweet.api.entry.MediaTweetEntryType;
-import static org.tweetwallfx.util.ToString.createToString;
-import static org.tweetwallfx.util.ToString.map;
-import static org.tweetwallfx.util.ToString.mapEntry;
-import static org.tweetwallfx.util.ToString.mapOf;
+
+import java.io.IOException;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static org.tweetwallfx.util.Nullable.valueOrDefault;
 
 /**
  * A {@link FilterStep} handling {@link Tweet}s by checking that photos comply
@@ -55,24 +52,25 @@ import static org.tweetwallfx.util.ToString.mapOf;
  */
 public class ImageContentFilterStep implements FilterStep<Tweet> {
 
-    private static final Logger LOG = LogManager.getLogger(ImageContentFilterStep.class);
-    private static final Map<Integer, Function<MediaTweetEntry, String>> MTE_SIZE_TO_URL_FUNCTIONS;
-
-    static {
-        final Map<Integer, Function<MediaTweetEntry, String>> tmp = new HashMap<>();
-
-        tmp.put(0, mte -> mte.getMediaUrl() + ":thumb");
-        tmp.put(1, mte -> mte.getMediaUrl() + ":small");
-        tmp.put(2, mte -> mte.getMediaUrl() + ":medium");
-        tmp.put(3, mte -> mte.getMediaUrl() + ":large");
-
-        MTE_SIZE_TO_URL_FUNCTIONS = Collections.unmodifiableMap(tmp);
-    }
+    private static final Logger LOG = LoggerFactory.getLogger(ImageContentFilterStep.class);
+    private static final Map<Integer, Function<MediaTweetEntry, String>> MTE_SIZE_TO_URL_FUNCTIONS = Map.of(
+            0, mte -> mte.getMediaUrl() + ":thumb",
+            1, mte -> mte.getMediaUrl() + ":small",
+            2, mte -> mte.getMediaUrl() + ":medium",
+            3, mte -> mte.getMediaUrl() + ":large");
 
     private final Config config;
+    private final ImageContentAnalysis.SafeSearch requiredSafeSearch;
 
     private ImageContentFilterStep(final Config config) {
         this.config = config;
+        requiredSafeSearch = new ImageContentAnalysis.SafeSearch(
+                config.adult().acceptableLikelyhood(),
+                config.medical().acceptableLikelyhood(),
+                config.racy().acceptableLikelyhood(),
+                config.spoof().acceptableLikelyhood(),
+                config.violence().acceptableLikelyhood()
+        );
     }
 
     @Override
@@ -80,54 +78,69 @@ public class ImageContentFilterStep implements FilterStep<Tweet> {
         Tweet t = tweet;
 
         do {
-            List<MediaTweetEntry> mtes = Stream.of(t.getMediaEntries())
-                    .filter(MediaTweetEntryType.photo::isType)
-                    .collect(Collectors.toList());
-
-            Result r = checkImages(mtes);
+            Result r = checkImages(tweet, t);
 
             if (r.isTerminal()) {
                 return r;
             } else {
                 t = t.getRetweetedTweet();
             }
-        } while (config.isCheckRetweeted() && null != t);
+        } while (config.checkRetweeted() && null != t);
 
+        LOG.debug("Tweet(id:{}): No terminal decision found -> NOTHING_DEFINITE",
+                tweet.getId());
         return Result.NOTHING_DEFINITE;
     }
 
-    private Result checkImages(final List<MediaTweetEntry> mtes) {
+    private Result checkImages(final Tweet tweet, final Tweet t) {
+        final List<MediaTweetEntry> mtes = Stream.of(t.getMediaEntries())
+                .filter(MediaTweetEntryType.photo::isType)
+                .toList();
+
         if (mtes.isEmpty()) {
+            LOG.debug("Tweet(id:{}): Tweet(id:{}) has no photos -> NOTHING_DEFINITE",
+                    tweet.getId(),
+                    t.getId());
             return Result.NOTHING_DEFINITE;
         }
 
-        final List<String> imageUrlStrings = mtes.stream().map(this::getImageUrlString).collect(Collectors.toList());
+        final List<String> imageUrlStrings = mtes.stream().map(this::getImageUrlString).toList();
         final Map<String, ImageContentAnalysis> visionAnalysis;
 
         try {
             visionAnalysis = GoogleVisionCache.INSTANCE.getCachedOrLoad(imageUrlStrings.stream());
         } catch (final IOException ex) {
-            LOG.info("Failed to analyze the following images: {}", imageUrlStrings);
+            LOG.warn("Tweet(id:{}): Tweet(id:{}) failed analysation of its photos -> REJECTED",
+                    tweet.getId(),
+                    t.getId(),
+                    ex);
             return Result.REJECTED;
         }
 
-        if (visionAnalysis.entrySet().stream()
-                .filter(e -> null != e.getValue() && null != e.getValue().getAnalysisError())
-                .peek(e -> LOG.warn("Analysis failed for {} with {}", e.getKey(), e.getValue()))
-                .map(Map.Entry::getValue)
-                .map(ImageContentAnalysis::getAnalysisError)
-                .findAny()
-                .isPresent()) {
-            LOG.info("Analyzation failed for one of the images in question ({}).", imageUrlStrings);
-            return Result.REJECTED;
-        }
+        for (final Map.Entry<String, ImageContentAnalysis> entry : visionAnalysis.entrySet()) {
+            if (null == entry.getValue()) {
+                continue;
+            }
 
-        if (visionAnalysis.entrySet().stream()
-                .filter(e -> null != e.getValue() && !isSafeCompliant(e))
-                .findAny()
-                .isPresent()) {
-            LOG.info("One of the images in not compliant to configuration ({}).", imageUrlStrings);
-            return Result.REJECTED;
+            if (null != entry.getValue().analysisError()) {
+                LOG.info("Tweet(id:{}): Tweet(id:{}) photo \"{}\" failed analysation \"{}\" -> REJECTED",
+                        tweet.getId(),
+                        t.getId(),
+                        entry.getValue().analysisError(),
+                        entry.getKey());
+                return Result.REJECTED;
+            }
+
+            final String analysisResult = diff(entry.getValue().safeSearch(), requiredSafeSearch);
+
+            if (!analysisResult.isEmpty()) {
+                LOG.info("Tweet(id:{}): Tweet(id:{}) photo \"{}\" is not compliant to configuration {} -> REJECTED",
+                        tweet.getId(),
+                        t.getId(),
+                        entry.getKey(),
+                        analysisResult);
+                return Result.REJECTED;
+            }
         }
 
         return Result.NOTHING_DEFINITE;
@@ -145,23 +158,23 @@ public class ImageContentFilterStep implements FilterStep<Tweet> {
         throw new IllegalArgumentException("Illegal value");
     }
 
-    private boolean isSafeCompliant(final Map.Entry<String, ImageContentAnalysis> e) {
-        final ImageContentAnalysis ica = e.getValue();
-        final ImageContentAnalysis.SafeSearch safeSearch = ica.getSafeSearch();
-
-        boolean compliant = true;
-
-        compliant &= isPartCompliant(safeSearch.getAdult(), config.getAdult());
-        compliant &= isPartCompliant(safeSearch.getMedical(), config.getMedical());
-        compliant &= isPartCompliant(safeSearch.getRacy(), config.getRacy());
-        compliant &= isPartCompliant(safeSearch.getSpoof(), config.getSpoof());
-        compliant &= isPartCompliant(safeSearch.getViolence(), config.getViolence());
-
-        return compliant;
-    }
-
-    private boolean isPartCompliant(final GoogleLikelihood likelihood, final SafeTypeConfig safeTypeConfig) {
-        return likelihood.compareTo(safeTypeConfig.getAcceptableLikelyhood()) <= 0;
+    private String diff(final ImageContentAnalysis.SafeSearch actual, final ImageContentAnalysis.SafeSearch required) {
+        return Map.<String, Function<ImageContentAnalysis.SafeSearch, GoogleLikelihood>>of(
+                "adult", ImageContentAnalysis.SafeSearch::adult,
+                "medical", ImageContentAnalysis.SafeSearch::medical,
+                "racy", ImageContentAnalysis.SafeSearch::racy,
+                "spoof", ImageContentAnalysis.SafeSearch::spoof,
+                "violence", ImageContentAnalysis.SafeSearch::violence)
+                .entrySet().stream()
+                .filter(e -> GoogleLikelihood.UNKNOWN != e.getValue().apply(actual))
+                .filter(e -> e.getValue().apply(actual).compareTo(e.getValue().apply(required)) > 0)
+                .map(e
+                        -> String.format(
+                        "%s: %s > %s",
+                        e.getKey(),
+                        e.getValue().apply(actual),
+                        e.getValue().apply(required)))
+                .collect(Collectors.joining("; "));
     }
 
     /**
@@ -188,114 +201,41 @@ public class ImageContentFilterStep implements FilterStep<Tweet> {
 
     /**
      * POJO used to configure {@link ImageContentFilterStep}.
+     *
+     * <p>
+     * Param {@code checkRetweeted} a boolean flag controlling whether for a
+     * retweet the retweeted Tweet is also checked
      */
-    public static final class Config {
+    private static record Config(
+            Boolean checkRetweeted,
+            SafeTypeConfig adult,
+            SafeTypeConfig medical,
+            SafeTypeConfig racy,
+            SafeTypeConfig spoof,
+            SafeTypeConfig violence) {
 
-        private boolean checkRetweeted = false;
-        private SafeTypeConfig adult = new SafeTypeConfig();
-        private SafeTypeConfig medical = new SafeTypeConfig();
-        private SafeTypeConfig racy = new SafeTypeConfig();
-        private SafeTypeConfig spoof = new SafeTypeConfig(GoogleLikelihood.UNLIKELY);
-        private SafeTypeConfig violence = new SafeTypeConfig();
-
-        /**
-         * Returns a boolean flag controlling whether for a retweet the
-         * retweeted Tweet is also checked.
-         *
-         * @return boolean flag controlling whether for a retweet the retweeted
-         * Tweet is also checked
-         */
-        public boolean isCheckRetweeted() {
-            return checkRetweeted;
-        }
-
-        /**
-         * Sets the boolean flag controlling whether for a retweet the retweeted
-         * Tweet is also checked.
-         *
-         * @param checkRetweeted the new value
-         */
-        public void setCheckRetweeted(final boolean checkRetweeted) {
-            this.checkRetweeted = checkRetweeted;
-        }
-
-        public SafeTypeConfig getAdult() {
-            return adult;
-        }
-
-        public void setAdult(SafeTypeConfig adult) {
-            this.adult = adult;
-        }
-
-        public SafeTypeConfig getMedical() {
-            return medical;
-        }
-
-        public void setMedical(SafeTypeConfig medical) {
-            this.medical = medical;
-        }
-
-        public SafeTypeConfig getRacy() {
-            return racy;
-        }
-
-        public void setRacy(SafeTypeConfig racy) {
-            this.racy = racy;
-        }
-
-        public SafeTypeConfig getSpoof() {
-            return spoof;
-        }
-
-        public void setSpoof(SafeTypeConfig spoof) {
-            this.spoof = spoof;
-        }
-
-        public SafeTypeConfig getViolence() {
-            return violence;
-        }
-
-        public void setViolence(SafeTypeConfig violence) {
-            this.violence = violence;
-        }
-
-        @Override
-        public String toString() {
-            return createToString(this, mapOf(
-                    mapEntry("checkRetweeted", isCheckRetweeted()),
-                    mapEntry("adult", getAdult()),
-                    mapEntry("medical", getMedical()),
-                    mapEntry("racy", getRacy()),
-                    mapEntry("spoof", getSpoof()),
-                    mapEntry("violence", getViolence())
-            )) + " extends " + super.toString();
+        @SuppressWarnings("unused")
+        public Config(
+                final Boolean checkRetweeted,
+                final SafeTypeConfig adult,
+                final SafeTypeConfig medical,
+                final SafeTypeConfig racy,
+                final SafeTypeConfig spoof,
+                final SafeTypeConfig violence) {
+            this.checkRetweeted = valueOrDefault(checkRetweeted, false);
+            this.adult = valueOrDefault(adult, new SafeTypeConfig(GoogleLikelihood.VERY_UNLIKELY));
+            this.medical = valueOrDefault(medical, new SafeTypeConfig(GoogleLikelihood.VERY_UNLIKELY));
+            this.racy = valueOrDefault(racy, new SafeTypeConfig(GoogleLikelihood.VERY_UNLIKELY));
+            this.spoof = valueOrDefault(spoof, new SafeTypeConfig(GoogleLikelihood.UNLIKELY));
+            this.violence = valueOrDefault(violence, new SafeTypeConfig(GoogleLikelihood.VERY_UNLIKELY));
         }
     }
 
-    public static final class SafeTypeConfig {
-
-        private GoogleLikelihood acceptableLikelyhood = GoogleLikelihood.VERY_UNLIKELY;
-
-        public SafeTypeConfig() {
-        }
+    private static record SafeTypeConfig(
+            GoogleLikelihood acceptableLikelyhood) {
 
         public SafeTypeConfig(final GoogleLikelihood acceptableLikelyhood) {
-            this.acceptableLikelyhood = acceptableLikelyhood;
-        }
-
-        public GoogleLikelihood getAcceptableLikelyhood() {
-            return acceptableLikelyhood;
-        }
-
-        public void setAcceptableLikelyhood(final GoogleLikelihood acceptableLikelyhood) {
-            this.acceptableLikelyhood = acceptableLikelyhood;
-        }
-
-        @Override
-        public String toString() {
-            return createToString(this, map(
-                    "acceptableLikelyhood", getAcceptableLikelyhood()
-            )) + " extends " + super.toString();
+            this.acceptableLikelyhood = valueOrDefault(acceptableLikelyhood, GoogleLikelihood.VERY_UNLIKELY);
         }
     }
 }
